changed CMakeLists.txt to properly include llvm; using map instead of unordered_map because of missing hash-fn

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,23 @@
+cmake_minimum_required(VERSION 2.6)
+
+# add_definitions( -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS )
+
 project(compiler)
 
+find_package(LLVM REQUIRED CONFIG)
+
+message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+
+set(CMAKE_CXX_COMPILER clang++)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g")
+
+include_directories(${LLVM_INCLUDE_DIRS})
+add_definitions(${LLVM_DEFINITIONS})
+
 add_executable(compiler stdlib.cpp ast_functions.cpp ast_expressions.cpp ast_statements.cpp context.cpp ast.cpp parser.cpp lexer.cpp main.cpp)
+
+llvm_map_components_to_libnames(llvm_libs core mcjit native)
+target_link_libraries(compiler ${llvm_libs})
 
 install(TARGETS compiler RUNTIME DESTINATION bin)
