--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,9 @@ find_package(LLVM REQUIRED CONFIG)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
-set(CMAKE_CXX_COMPILER clang++)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g")
+# set(CMAKE_CXX_COMPILER clang++)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g")
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g -fsanitize=address -fPIC")
 
 include_directories(${LLVM_INCLUDE_DIRS})
@@ -19,10 +20,10 @@ add_definitions(${LLVM_DEFINITIONS})
 add_executable(compiler stdlib.cpp ast_functions.cpp ast_expressions.cpp ast_statements.cpp context.cpp ast_base.cpp parser.cpp lexer.cpp codegen.cpp type.cpp codegenerator.cpp compiler.cpp main.cpp)
 add_library(stdshl stdlib.cpp)
 
-find_package( Boost COMPONENTS program_options REQUIRED )
-include_directories( ${Boost_INCLUDE_DIR} )
+find_package(Boost COMPONENTS program_options REQUIRED)
+include_directories(${Boost_INCLUDE_DIR})
 
-llvm_map_components_to_libnames(llvm_libs core mcjit native jit ipo)
-target_link_libraries(compiler ${llvm_libs} ${Boost_LIBRARIES})
+llvm_map_components_to_libnames(llvm_libs core mcjit native ipo support executionengine)
+target_link_libraries(compiler ${Boost_LIBRARIES} ${llvm_libs})
 
 install(TARGETS compiler RUNTIME DESTINATION bin)
