--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,15 @@ cmake_minimum_required(VERSION 2.6)
 
 project(shlc)
 
+enable_language(CXX)
+
 find_package(LLVM REQUIRED CONFIG)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 set(CMAKE_CXX_COMPILER clang++)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++17")
 
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
@@ -18,13 +20,17 @@ add_definitions(${LLVM_DEFINITIONS})
 find_package(Boost COMPONENTS program_options REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
 
+add_compile_definitions(STD_LIBRARY_PATH="${CMAKE_SOURCE_DIR}/include")
+
 add_executable(shlc stdlib.cpp ast_functions.cpp ast_expressions.cpp ast_statements.cpp ast_types.cpp context.cpp ast_base.cpp parser.cpp lexer.cpp codegen.cpp type.cpp codegenerator.cpp compiler.cpp main.cpp)
 add_executable(fuzzshl stdlib.cpp ast_functions.cpp ast_expressions.cpp ast_statements.cpp ast_types.cpp context.cpp ast_base.cpp parser.cpp lexer.cpp codegen.cpp type.cpp codegenerator.cpp fuzz.cpp)
 
-set_target_properties(shlc PROPERTIES COMPILE_FLAGS "-fsanitize=address -fPIC")
-set_target_properties(fuzzshl PROPERTIES CMAKE_CXX_COMPILER "clang++")
-set_target_properties(fuzzshl PROPERTIES COMPILE_FLAGS "-fsanitize=fuzzer,address -fPIC")
-set_target_properties(fuzzshl PROPERTIES LINK_FLAGS "-fsanitize=fuzzer,address -fPIC")
+target_compile_options(shlc PRIVATE -fsanitize=address -fPIC)
+target_link_options(shlc PRIVATE -fsanitize=address -fPIC)
+
+# set_target_properties(fuzzshl PROPERTIES CMAKE_CXX_COMPILER "clang++")
+target_compile_options(fuzzshl PRIVATE -fsanitize=fuzzer,address -fPIC)
+target_link_options(fuzzshl PRIVATE -fsanitize=fuzzer,address -fPIC)
 
 llvm_config(shlc USE_SHARED core mcjit native ipo support executionengine)
 llvm_config(fuzzshl USE_SHARED core mcjit native ipo support executionengine)
