fix return statement in main function & fix option parsing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 set(CMAKE_CXX_COMPILER clang++)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
 
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
@@ -25,8 +26,8 @@ add_compile_definitions(STD_LIBRARY_PATH="${CMAKE_SOURCE_DIR}/include")
 add_executable(shlc stdlib.cpp ast_functions.cpp ast_expressions.cpp ast_statements.cpp ast_types.cpp context.cpp ast_base.cpp parser.cpp lexer.cpp codegen.cpp cleanup.cpp type.cpp codegenerator.cpp compiler.cpp main.cpp)
 add_executable(fuzzshl stdlib.cpp ast_functions.cpp ast_expressions.cpp ast_statements.cpp ast_types.cpp context.cpp ast_base.cpp parser.cpp lexer.cpp codegen.cpp cleanup.cpp type.cpp codegenerator.cpp fuzz.cpp)
 
-target_compile_options(shlc PRIVATE -fsanitize=address,undefined -fPIC)
-target_link_options(shlc PRIVATE -fsanitize=address,undefined -fPIC)
+target_compile_options(shlc PRIVATE -fsanitize=address -fPIC)
+target_link_options(shlc PRIVATE -fsanitize=address -fPIC)
 
 # set_target_properties(fuzzshl PROPERTIES CMAKE_CXX_COMPILER "clang++")
 target_compile_options(fuzzshl PRIVATE -fsanitize=fuzzer,address -fPIC)
